base/repository/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpirafex-repository
  namespace: alpirafex-repo
  labels:
    app.kubernetes.io/name: alpirafex-repository
    app.kubernetes.io/part-of: alpirafex
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: alpirafex-repository
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alpirafex-repository
        app.kubernetes.io/part-of: alpirafex
    spec:
      containers:
        - name: nginx
          image: ghcr.io/rafex/alpirafex-repository:pending
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
