base/repository/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpirafex-repository
  namespace: alpirafex-repo
  labels:
    app.kubernetes.io/name: alpirafex-repository
    app.kubernetes.io/part-of: alpirafex
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alpirafex-repository
  ports:
    - name: http
      port: 80
      targetPort: http
